fixing problem of simultaneous collapsing

--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,3 @@
-.{
-    padding: 0;
-    margin: 0;
-}
 body{
     font-family: 'Open Sans',sans-serif;
     background-color: #f5f5f5;
@@ -37,6 +33,7 @@ p{
     opacity: 1;
     background-color: #111111!important;
 }
+
 .navbarbottom{
     background-color: #303030 !important;
     font-weight: 700;
@@ -97,8 +94,8 @@ font-size: 20px;
 }
 .header img{
      border-radius: 50%;
-    height: 150px;
-    width: 150px;
+    height: 175px;
+    width: 175px;
     margin-left: auto;
     margin-right: auto;
     
@@ -112,6 +109,6 @@ font-size: 14px;
 h1{
     text-transform: uppercase;
     font-weight: bold;
-    font-size: 33px;
+    font-size: 27px;
 }
 }
